force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/Apttus_Billing__BillingMetrics__c.object-meta.xml
<CustomObject>
    <label>Billing Metric</label>
    <nameField>
        <displayFormat>BM-{00000000}</displayFormat>
        <label>BillingMetrics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>