force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/fields/Apttus_Billing__DaySalesOutstanding__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DaySalesOutstanding__c</fullName>
    <description>This field will store DSO value Month wise</description>
    <inlineHelpText>This field store&apos;s DSO value Month wise</inlineHelpText>
    <label>Day Sales Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>