force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/fields/Apttus_Billing__MonthYear__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__MonthYear__c</fullName>
    <description>Stores Month-Year Combination For Calculated DSO Value</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores Month-Year Combination For Calculated DSO Value</inlineHelpText>
    <label>Month Year</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>