force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/fields/Apttus_Billing__MonthYearDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__MonthYearDate__c</fullName>
    <description>Store date equivalent for month year</description>
    <label>MonthYearDate</label>
    <type>Date</type>
</CustomField>