force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/fields/Apttus_Billing__Quarter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Quarter__c</fullName>
    <formula>Apttus_Billing__MonthYearDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Date</type>
</CustomField>