force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/fields/Apttus_Billing__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Type__c</fullName>
    <description>Store type of DSO</description>
    <inlineHelpText>Stores type value of DSO</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>