force-app/main/default/objects/Apttus_Billing__BillingMetrics__c/fields/Apttus_Billing__Year__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Year__c</fullName>
    <description>Year for current summary metric record derive value from field Month Year</description>
    <formula>Apttus_Billing__MonthYearDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Date</type>
</CustomField>